--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,10 +30,10 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link active" data-toggle="pill" href="#resource-tab">资源列表</a>
+                <a class="nav-link active" data-toggle="pill" href="#resource-tab">我的上传</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#uploaded-tab">我的资源</a>
+                <a class="nav-link" data-toggle="pill" href="#uploaded-tab">文件编辑</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="pill" href="#downloaded-tab">我的下载</a>
@@ -43,6 +43,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="upload" target="_blank">文件上传</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/signin">切换用户</a>
             </li>
         </ul>
     </div>
@@ -97,6 +100,7 @@
                         class="glyphicon glyphicon-arrow-down"></i> 获取更多</b></button>
                 <br/><br/>
             </div>
+            <!--我的下载-->
             <div class="tab-pane" id="downloaded-tab">
                 <div id="downloaded-content"></div>
                 <button class="btn btn-link btn-block btn-lg" onclick="offset += 1;getPage();"><b><i
