--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/assets/css/style.css"/>
     <title>首页</title>
 </head>
-<body id="particles-js">
+<body id="particles-js" style="background-color: white">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar-toggler fixed-top">
     <img src="/assets/img/efo-favicon.png" class="navbar-brand" style="width: 2rem;height: 2.5rem;"/>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -30,22 +30,22 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link active" data-toggle="pill" href="#resource-tab">我的上传</a>
+                <a class="nav-link active" style="color: #fff;font-size: 19px;"  data-toggle="pill" href="#resource-tab">我的文档</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#uploaded-tab">文件编辑</a>
+                <a class="nav-link" style="color: #fff;font-size: 19px"  data-toggle="pill" href="#uploaded-tab">文档编辑</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#downloaded-tab">我的下载</a>
+                <a class="nav-link" style="color: #fff;font-size: 19px"  data-toggle="pill" href="#downloaded-tab">我的下载</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="pill" href="#bio-tab">我的资料</a>
+                <a class="nav-link" style="color: #fff;font-size: 19px"  data-toggle="pill" href="#bio-tab">我的资料</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="upload" target="_blank">文件上传</a>
+                <a class="nav-link" style="color: #fff;font-size: 19px"  href="upload" target="_blank">文档上传</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/signin">切换用户</a>
+                <a class="nav-link" style="color: #fff;font-size: 19px"  href="/signin">退出登录</a>
             </li>
         </ul>
     </div>
@@ -60,10 +60,10 @@
         <div class="col-sm-12 col-10 tab-content">
             <!--资源列表-->
             <div class="tab-pane active" id="resource-tab">
-                <div class="row content-box rounded">
+                <div class="row rounded" style="background-color: white !important;">
                     <div class="col-sm-2 col-4">
                         <br/>
-                        <select class="form-control content-filter" id="category" title="查找指定分类文件"
+                        <select class="form-control content-filter" id="category" title="查找指定分类文档"
                                 data-toggle="tooltip">
                             <option value="0">全部</option>
                         </select>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <br/>
-                <div id="resources-content"></div>
+                <div id="resources-content" ></div>
                 <button class="btn btn-link btn-block btn-lg" onclick="offset += 1;getPage();"><b><i
                         class="glyphicon glyphicon-arrow-down"></i> 获取更多</b></button>
                 <br/><br/>
@@ -252,18 +252,18 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">文件信息编辑</h4>
+                <h4 class="modal-title">文档信息编辑</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <div class="row">
                     <div class="col-sm-9">
                         <input type="hidden" id="edit-file-id" value="0">
-                        <input type="text" class="form-control" title="文件名" placeholder="文件名" data-toggle="tooltip"
+                        <input type="text" class="form-control" title="文档名" placeholder="文档名" data-toggle="tooltip"
                                id="edit-file-name"/>
                     </div>
                     <div class="col-sm-3">
-                        <select class="form-control" id="edit-file-category" title="文件分类" data-toggle="tooltip">
+                        <select class="form-control" id="edit-file-category" title="文档分类" data-toggle="tooltip">
                             <option value="0">未分类</option>
                         </select>
                     </div>
