--- a/src/main/resources/static/signin.html
+++ b/src/main/resources/static/signin.html
@@ -28,9 +28,9 @@
     <div class="row">
         <div class="col-1 col-sm-4"></div>
         <div id="signin-div"  class="col-sm-4 col-10 rounded content-box text-center center-vertical"
-             style="padding: 2rem 3rem;opacity: 0.85">
+             style="padding: 2rem 3rem;opacity: 0.85;background-color: white">
             <div id="login-div">
-                <h3>个人智能文档管理系统</h3><br/>
+                <h3>个人文档智能管理系统</h3><br/>
                 <input type="text" id="loginName" class="form-control" placeholder="用户名/电子邮箱" maxlength="50"/>
                 <br/>
                 <input type="password" id="password" maxlength="50" class="form-control" placeholder="登录密码"/>
